--- a/Bug/CSS/position/test/index.html
+++ b/Bug/CSS/position/test/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="grandparent">
         <div class="parent">
-            <span class="child red">Child</span>
-            <span class="child yellow">Child</span>
-            <span class="child blue">Child</span>
+            <div class="child red">Child</div>
+            <div class="child yellow">Child</div>
+            <div class="child blue">Child</div>
         </div>
     </div>
 </body>
