--- a/Bug/HTML/Details/video-player/index.html
+++ b/Bug/HTML/Details/video-player/index.html
@@ -11,7 +11,7 @@
     <div class="video-player">
       <div class="video-container">
         <video controls>
-          <source src="./assets/kimbug-bjj.mp4" type="video/mp4" />
+          <source src="./assets/videos/kimbug-bjj.mp4" type="video/mp4" />
           <source src="./assets/kimbug-bjj.mov" type="video/mp4" />
         </video>
       </div>
