--- a/Bug/CSS/animation/index.html
+++ b/Bug/CSS/animation/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box active">
+    <div class="box">
+        Hello Box
+    </div>
+    <div class="box2">
+        Hello Box
+    </div>
+    <div class="box3">
+        Hello Box
+    </div>
+    <div class="box4">
         Hello Box
     </div>
 </body>
