--- a/Bug/CSS/animation/exam/index.html
+++ b/Bug/CSS/animation/exam/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Transition</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
 </head>
-    <body>
-        <button class="line-button" type="button">Button</button>
-    </body>
+<body>
+    <section class="loading">
+        <h1 class="loading-title">Loading...</h1>
+        <div class="progress-bar">
+            <span class="progress-bar-gauge"></span>
+        </div>
+    </section>
+</body>
 </html>
