--- a/Nomad/kakao/index.html
+++ b/Nomad/kakao/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="https://www.naver.com/favicon.ico?1" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Semantic tags</title>
   </head>
-  <body>
+  <body id="mybody">
     <header>
       <h1>The Yang Times</h1>
     </header>
@@ -14,7 +15,9 @@
       <p>Top News</p>
     </main>
     <aside>
-      <p>aside</p>
+      <p>
+        <mark>aside</mark>
+      </p>
     </aside>
     <nav>
       <ul>
