--- a/Nomad/kakao-challenges/day-8/index.html
+++ b/Nomad/kakao-challenges/day-8/index.html
@@ -10,8 +10,150 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Library</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <div class="header-item">
+          <i class="fas fa-bars fa-lg"></i>
+        </div>
+        <div class="header-item header-item-text">library</div>
+        <div class="header-item">
+          <i class="fas fa-shopping-basket fa-lg"></i>
+        </div>
+      </header>
+
+      <div class="search">
+        <input type="text" placeholder="Search books..." />
+        <i class="fas fa-search"></i>
+      </div>
+
+      <main class="top">
+        <h1>Book of the day</h1>
+        <div class="top-content">
+          <div class="top-content-img">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/41lnZmRZDpL._AC_SX184_.jpg" alt="" />
+          </div>
+          <div class="top-content-text">
+            <div class="top-content-text-title">Black Buck</div>
+            <div class="top-content-text-author">by Mateo Askaripour</div>
+            <div class="top-content-text-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+            <div class="top-content-for">
+              <div class="top-content-for-box">novel</div>
+              <div class="top-content-for-box">satire</div>
+            </div>
+            <div class="top-content-for-bookmark">
+              <div class="mark"><i class="fas fa-bookmark"></i></div>
+              <button class="book-now">Book Now</button>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <main class="middle">
+        <h1>Top Adventures</h1>
+        <div class="middle-content">
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/91W8IaQemKL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/81Czi+5ArRL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/A1UaCjR8TDL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/61nZqhftUPL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/810BkqRP+iL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+          <div class="middle-content-item">
+            <div class="middle-content-item-img">
+              <img src="https://m.media-amazon.com/images/I/A1v3Ec+hJwL._AC_UY218_.jpg" alt="" />
+            </div>
+            <div class="middle-content-item-rating">
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="fas fa-star fa-xs"></i>
+              <i class="far fa-star fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </main>
+      <main class="bottom">
+        <h1>Popular authors</h1>
+        <div class="bottom-content">
+          <div class="bottom-content-img">
+            <img src="https://pbs.twimg.com/profile_images/1091132938203340802/6qDXjPyF_400x400.jpg" alt="" />
+          </div>
+          <div class="bottom-content-text">
+            <div class="bottom-content-text-title">George Raymond Richard Martin</div>
+            <div class="bottom-content-text-text">
+              MATEO ASKARIPOUR was a 2018 Rhode Island Writers Colony writer-in-residence..
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
